--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
 	"require": {
 		"php": ">=5.2.0",
 		"ryprop/nife": "~0.0.1",
-		"earthit/schema": "~0.0.3"
+		"earthit/schema": "~0.0.3",
+		"earthit/dbc": "~0.0.3"
 	},
 	"autoload": {
 		"psr-0": {
