Require earthit/php-common ~0.0.6 because 0.0.5 was kind of screwed up.

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 	"require": {
 		"php": ">=5.2.0",
 		"ryprop/nife": "~0.0.1",
+		"earthit/php-common": "~0.0.6",
 		"earthit/schema": "~0.0.3",
 		"earthit/dbc": "~0.0.3"
 	},
