Work towards automatically creating test database.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
+.create-database.sql
+.create-tables.sql
+.database-created
+.drop-tables.sql
 composer.lock
+config/test-dbc.json
+test-schema.php
+util/SchemaSchemaDemo.jar
 vendor
