--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
 		"earthit/schema": "~0.0.4",
 		"earthit/dbc": "~0.0.4"
 	},
+	"require-dev": {
+		"doctrine/dbal": "~2.4.0"
+	},
 	"autoload": {
 		"psr-0": {
 			"EarthIT_CMIPREST_": "lib/"
