--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,11 @@
 	"description": "Collection-Modifiers-ID-Property REST framework",
 	"license": "MIT",
 	"require": {
-		"php": "~5.2",
-		"ryprop/nife": "~0.2",
-		"earthit/php-common": "~0.0.10",
-		"earthit/schema": "~0.1",
-		"earthit/dbc": "~0.0.5"
+		"php": ">=5.2",
+		"ryprop/nife": "^0.2",
+		"earthit/php-common": "^0.0.14",
+		"earthit/schema": "^0.1.9",
+		"earthit/dbc": "^0.0.5"
 	},
 	"require-dev": {
 		"doctrine/dbal": "~2.4"
