Move test stuff around to be more like how it is in PHPStorage, and to run on Travis.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 .database-created
 composer.lock
 config/test-dbc.json
-test-schema.php
+test/db-scripts/create-database.sql
+test/schema.php
 util/SchemaSchemaDemo.jar
 util/test-psql
 vendor
