--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,11 @@
 	"autoload": {
 		"psr-0": {
 			"EarthIT_CMIPREST_": "lib/"
-		},
-		"classmap": [ "test" ]
+		}
+	},
+	"autoload-dev": {
+		"psr-0": {
+			"EarthIT_CMIPREST_": "test/"
+		}
 	}
 }
