--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ addons:
   postgresql: "9.3"
 
 before_script:
-  - make .create-database.sql
-  - psql -U postgres <.create-database.sql
+  - make test/db-scripts/create-database.sql
+  - psql -U postgres <test/db-scripts/create-database.sql
   - touch .database-created
 
 script: make run-unit-tests
