--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 		"php": ">=5.2",
 		"ryprop/nife": "^0.2",
 		"togos/action": "^1.0.0",
-		"earthit/php-common": "^1.4.1",
+		"earthit/php-common": "^1.6.0",
 		"earthit/schema": "^1.2.1",
 		"earthit/storage": "^0.4.8",
 		"earthit/dbc": "^1.0.0"
@@ -17,7 +17,8 @@
 	},
 	"autoload": {
 		"psr-0": {
-			"EarthIT_CMIPREST_": "lib/"
+			"EarthIT_CMIPREST_": "lib/",
+			"JsonSerializable": "lib/"
 		}
 	},
 	"autoload-dev": {
